--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                     <nav class="navbar navbar-expand-xl fixed-top navbar-light navbar-transparent pt-3 pb-3">
                         <div class="col-2 col-xl-8">
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarNavShowDropdown" aria-controls="navbarNavDropdown"
-                                aria-expanded="false" aria-label="Toggle navigation">
+                                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                                aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <div class="collapsing navbar-collapse " id="navbarNavDropdown">
+                            <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
                                         <a class="nav-link active" aria-current="page" href="#">آفرینش</a>
@@ -71,29 +71,17 @@
                         <div class="col-4 col-xl-2 pt-3">
                             <div class="input-group md-form form-sm form-1 pl-0">
                                 <div class="input-group input-group-prepend mb-3">
-                                    <input type="text" class="form-control search-input" placeholder="جستجو" aria-label="search" aria-describedby="basic-addon1">
+                                    <input type="text" class="form-control search-input" placeholder="جستجو"
+                                        aria-label="search" aria-describedby="basic-addon1">
                                     <span class="input-group-text bg-dark search-span" id="basic-addon1">
                                         <i class="fa fa-search text-white"></i>
                                     </span>
-                                  </div>
-                            </div>  
-                        </div>        
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-3 col-md-2 col-xl-1 offset-xl-1">
                             <a class="navbar-brand " href="#"><img src="image/Logo1e.png" alt="logo"></a>
                         </div>
-                </div>
-                <div class="row">
-                    <div class="show-menu collapsing" id="navbarNavShowDropdown">
-                        <h1>menu</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quo quas, veniam cum recusandae cupiditate soluta. Officiis dolores vitae beatae cum eaque? Illum iure nobis laborum architecto eveniet dolores doloribus.
-                        Numquam ut eos quam, excepturi facilis necessitatibus quos, exercitationem dolorem architecto libero repellendus distinctio minima reprehenderit velit aut fuga dolor blanditiis sapiente nobis maiores veritatis. Atque, veritatis a! Voluptas, a!
-                        Nulla, obcaecati soluta magnam perferendis sed eum sint officia eos a molestias exercitationem vitae! Minima itaque debitis quibusdam impedit quia consectetur consequuntur perferendis ab, vitae provident! Enim explicabo quod ipsum.
-                        Laborum dolores ipsam, vero perspiciatis qui suscipit quis quo assumenda, at harum, recusandae dolor? Ut quos labore perferendis, doloribus rem repellat omnis voluptatibus iusto deleniti accusantium! Velit eos laboriosam nulla?
-                        Quisquam maiores, sint repudiandae quas ad, ratione facere, architecto cumque quidem error blanditiis doloremque. Corrupti saepe perspiciatis, doloribus facere, possimus, numquam dolores obcaecati animi provident vel eligendi labore totam quam!
-                        Corrupti, doloribus. Dolore pariatur adipisci quaerat accusantium rerum unde molestiae incidunt provident amet, perferendis aliquam porro maxime quis nesciunt voluptatem enim quae repellat corrupti neque dolores! Temporibus eaque nam dicta?
-                        Ad explicabo nesciunt architecto vitae recusandae ipsa voluptatibus iusto placeat nulla hic cum earum sit provident saepe, quo aliquid nam officia nihil magni error obcaecati molestiae quibusdam omnis? Officia, ab?</p>
-
-                    </div>
                 </div>
             </div>
             </nav>
