--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggl" href="#" id="navbarDropdownMenuLink"
                                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                            محصولات
+                                             محصولات آفرینش
                                         </a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                             <li><a class="dropdown-item drop-item" href="#">ژل رویال</a></li>
